--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Teybat Explorers Progressive Web App" />
     <meta name="theme-color" content="#1976d2" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <title>Teybat Explorers</title>
+    <title>PORTAL SOPORTE OPERATIVO</title>
   </head>
   <body>
     <div id="root"></div>
